--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
     <!-- 手机端导航 -->
     <div class="mobNav">
-        <ul class="wp">
+        <ul class="">
             <li>
                 <div class="navp flex">
                     <a href="" target="_blank">学校概况</a>
@@ -679,7 +679,7 @@
     <!-- 风采学院 -->
     <div class="rowd">
         <div class="">
-            <h3 class="fecai co73 top-title flex-center top-title-block" aos="fade-up">风采数院</h3>
+            <h3 class="fecai co73 top-title flex-center top-title-block" aos="fade-up">风采学院</h3>
             <!-- 电脑端 -->
             <ul id="sm" class="fold_wrap pc-show clearfix aos-init aos-animate" aos="fade-up" aos-delay="50">
                 <li>
@@ -993,7 +993,7 @@
                     </li>
                 </ul>
             </div>
-            <div class=" more-msg learn-more">了解详情 ></div>
+            <div class="more-msg learn-more">了解详情 ></div>
         </div>
     </div>
     <!-- footer -->
