--- a/employment-information.html
+++ b/employment-information.html
@@ -87,7 +87,7 @@
     </div>
     <!-- 手机端导航 -->
     <div class="mobNav">
-        <ul class="wp">
+        <ul class="">
             <li>
                 <div class="navp flex">
                     <a href="" target="_blank">学校概况</a>
