其余页面调整

--- a/student-work.html
+++ b/student-work.html
@@ -87,7 +87,7 @@
     </div>
     <!-- 手机端导航 -->
     <div class="mobNav">
-        <ul class="wp">
+        <ul class="">
             <li>
                 <div class="navp flex">
                     <a href="" target="_blank">学校概况</a>
@@ -381,7 +381,7 @@
                         <li class="branch-list-item">
                             <a href="" class="alin_r  ">
                                 <img src="./img/studentWork/student-1.png" alt="">
-                                <p class="fs14 line3 aline_r">"2023年阿斯塔纳世博会中国馆 国家主席习近平邀请哈萨克斯坦总统纳扎尔巴耶夫体验我司模拟驾驶器</p>
+                                <p class="fs14 line3 aline_r">2023年阿斯塔纳世博会中国馆 国家主席习近平邀请哈萨克斯坦总统纳扎尔巴耶夫体验我司模拟驾驶器</p>
                             </a>
                         </li>
                         <li class="branch-list-item">
