--- a/about.html
+++ b/about.html
@@ -148,59 +148,54 @@
     </div>
     <!-- 主体 -->
     <main>
-        <div class="wp">
-            <div class="top-nav">
+        <!-- 面包屑 -->
+        <div style=" background: rgba(175, 175, 175, 0.22);">
+            <!-- 面包屑 -->
+            <div class="top-nav wp">
                 <img src="./img/news/icon1.png" alt="">
                 <a href="./index.html" class="fs14">首页 ></a>
-                <a href="./news-bulletin.html" class="fs14">学院介绍</a>
+                <span class="fs14">党建工作</span>
             </div>
         </div>
 
         <div class="main-content">
             <!-- 学院介绍 -->
             <div class="content college-content">
-                <div class="college-main content-main">
-                    <div class="college-left">
-                        <!-- <img src="./img/about/img.png" alt=""> -->
-                        <span>
-                            走进科贸，未来有你创造
-                        </span>
-                    </div>
-
-                    <div class="college-rigth">
+                <div class="college-main content-main wp">
+                    <div class="college-rigth wp">
 
                         <div class="rigth-title">
-                            <b>学院介绍</b>
+                            <b class="fs36">学院介绍</b>
                         </div>
                         <div class="number">
                             <ul class="wow">
                                 <li>
                                     <div class="num">
-                                        <b id="nian" class="number-text">2288</b>
+                                        <b id="nian" class="number-text fs48">2288</b>
                                         <span>人</span>
                                     </div>
-                                    <div class="txt">学生人数</div>
+                                    <div class="txt fs14">学生人数</div>
                                 </li>
                                 <li>
                                     <div class="num">
-                                        <b id="gs" class="number-text">9</b>
-                                        <span>个</span>
+                                        <b id="gs" class="number-text fs48">9</b>
+                                        <span class="fs14">个</span>
                                     </div>
-                                    <div class="txt">招生专位</div>
+                                    <div class="txt fs14">招生专位</div>
                                 </li>
                                 <li>
                                     <div class="num">
-                                        <b id="yi" class="number-text">56</b>
-                                        <span>个</span>
+                                        <b id="yi" class="number-text fs48">56</b>
+                                        <span class="fs14">个</span>
                                     </div>
-                                    <div class="txt">专职教师</div>
+                                    <div class="txt fs14">专职教师</div>
                                 </li>
                                 <li>
                                     <div class="num">
                                         <b id="rs" class="number-text">76</b>
-                                        <span>个</span>
+                                        <span class="fs14">个</span>
                                     </div>
-                                    <div class="txt">企业招聘</div>
+                                    <div class="txt fs14">企业招聘</div>
                                 </li>
                             </ul>
                         </div>
@@ -237,10 +232,10 @@
 
             <!-- 管理团队 -->
             <div class="content mobaily">
-                <div class="content-main mobaily-main">
-                    <h2 class="content-title mobaily-title">管理团队</h2>
+                <div class="content-main mobaily-main wp">
+                    <h2 class="content-title mobaily-title fs36">管理团队</h2>
 
-                    <div class="mobaily-content">
+                    <div class="mobaily-content flex-sb">
                         <div class="mobaily-item">
                             <div class="item-img">
 
@@ -248,49 +243,46 @@
 
                             </div>
                             <div class="item-text">
-                                <h5 class="text-title">
+                                <h5 class="text-title fs18">
                                     院长</h5>
-                                <hr class="text-hr">
-                                <p class="text line8">
+                                <p class="text line8 fs14">
                                     冯军焕，工学博士，教授，陕西扶风人，1962年生。曾任西南交通大学信息科学与技术学院党委书记、软件学院院长、信息中心主任等职务，主要从事计算机软件、计算机多媒体技术与应用、计算机网络、Internet技术与应用、Ad
                                     Hoc网络、现代教育技术方面的教学和研究工作。</p>
                             </div>
                         </div>
-                        <div class="mobaily-item"> <img src="" alt="">
+                        <div class="mobaily-item">
                             <div class="item-img">
 
-                                <img src="./img/about/people-2.png" alt="">
+                                <img src="./img/about/prople-1.png" alt="">
 
                             </div>
-
                             <div class="item-text">
-                                <h5 class="text-title">
-                                    执行院长</h5>
-                                <hr class="text-hr">
-                                <p class="text line8">
-                                    董艳云，高级工程师，1962年生。曾任西南交通大学教务处副处长、资产与实验处副处长等职务。从事高等教育教学管理工作30余年，积累了丰富的教育教学管理经验获得国家教学成果二等奖2项，多次参加教育部举办的赴非洲、美国等国家的中国高等教育展，先后赴德国、美国英国高校进行合作交流。
-                                </p>
+                                <h5 class="text-title fs18">
+                                    院长</h5>
+                                <p class="text line8 fs14">
+                                    冯军焕，工学博士，教授，陕西扶风人，1962年生。曾任西南交通大学信息科学与技术学院党委书记、软件学院院长、信息中心主任等职务，主要从事计算机软件、计算机多媒体技术与应用、计算机网络、Internet技术与应用、Ad
+                                    Hoc网络、现代教育技术方面的教学和研究工作。</p>
                             </div>
                         </div>
-                        <div class="mobaily-item"> <img src="" alt="">
+                        <div class="mobaily-item">
                             <div class="item-img">
-                                <img src="./img/about/people-3.png" alt="">
+
+                                <img src="./img/about/prople-1.png" alt="">
 
                             </div>
-
                             <div class="item-text">
-                                <h5 class="text-title">
-                                    总支书记</h5>
-                                <hr class="text-hr">
-                                <p class="text line8">
-                                    葛贤志，高级工程师，大校军衔。军队委托清华大学培养研究生兼职导师，先后在中国人民解放军陆军56014等部队工作，历任排长、参谋连长、政治指导员、政治协理员政治救导员、雷达工程师、某特种部队总工程师兼高级工
-                                </p>
+                                <h5 class="text-title fs18">
+                                    院长</h5>
+                                <p class="text line8 fs14">
+                                    冯军焕，工学博士，教授，陕西扶风人，1962年生。曾任西南交通大学信息科学与技术学院党委书记、软件学院院长、信息中心主任等职务，主要从事计算机软件、计算机多媒体技术与应用、计算机网络、Internet技术与应用、Ad
+                                    Hoc网络、现代教育技术方面的教学和研究工作。</p>
                             </div>
                         </div>
+
                     </div>
 
-                    <div class="mobaily-footer">
-                        <p>了解更多 ></p>
+                    <div class="mobaily-footer wp flex-center">
+                        <a href="">了解更多 ></p>
                     </div>
                 </div>
 
@@ -298,8 +290,8 @@
 
             <!-- 学院发展 -->
             <div class="content develop">
-                <div class="content-main develop-main">
-                    <h2 class="content-title develop-title">学院发展</h2>
+                <div class="content-main develop-main wp">
+                    <h2 class="content-title develop-title fs36">学院发展</h2>
                     <div class="develop-content">
                         <p class="text">
                             精准把握职业教育规律，强化优质资源整合，积极推进数字产业与职业教育深度融合，培养具有典型数字时代特征的高素质技能型人才，为将数字产业学院打造成为具有行业影响力的人才培养基地而矢志奋斗！
@@ -307,7 +299,8 @@
                         </p>
 
                         <div class="img">
-                            <img src="./img/about/develop.png" alt="">
+                            <img src="./img/about/develop.png" alt="" class="pc-img-show">
+                            <img src="./img/about/develop.png" alt="" class="pc--img-hide">
                         </div>
                     </div>
 
@@ -315,102 +308,114 @@
             </div>
 
             <!-- 机构设置 -->
-
             <div class="content institution">
-                <div class="content-main institution-main">
+                <div class="content-main institution-main wp">
                     <h2 class="content-title institution-title">机构设置</h2>
-                    <div class="institution-list">
-                        <div class="institution-item">
-                            <div class="title">
-                                <span>综合事务办公室</span>
+                    <div class="institution-list flex-sb">
+                        <div class="institution-item flex-sb">
+                            <div class="title fwb">
+                                综合事务办公室
                             </div>
-                            <p class="text-one">负责学院的日常管理工作，包括人员管理、资产管理、绩效管理、文档管理及对外联络等工作；协调与服务各部门工作，其他学院事务性工作。</p>
-                            <p>
+                            <p class="text-one fs14">负责学院的日常管理工作，包括人员管理、资产管理、绩效管理、文档管理及对外联络等工作；协调与服务各部门工作，其他学院事务性工作。</p>
+                            <p class="fs14 connect">
                                 联 系 人：许老师<br>
                                 办公地点：学校内3号教学楼3309室<br>
                                 联系电话：13813881388
                             </p>
                         </div>
-                        <div class="institution-item">
-                            <div class="title"><span>学生事务办公室</span></div>
-                            <p class="text-one">负责学生日常事务管理；奖、助学金管理和评审；提供心理咨询；提供职业生涯规划和就业指导；保障学生安全，处理紧急事故；受理学生申诉等。</p>
-                            <p>
-                                联 系 人：任老师 <br>
-                                办公地点：学校内3号教学楼3309室 <br>
+                        <div class="institution-item flex-sb">
+                            <div class="title fwb">
+                                综合事务办公室
+                            </div>
+                            <p class="text-one fs14">负责学院的日常管理工作，包括人员管理、资产管理、绩效管理、文档管理及对外联络等工作；协调与服务各部门工作，其他学院事务性工作。</p>
+                            <p class="fs14 connect">
+                                联 系 人：许老师<br>
+                                办公地点：学校内3号教学楼3309室<br>
                                 联系电话：13813881388
                             </p>
                         </div>
-                        <div class="institution-item">
-                            <div class="title"><span>教务事务办公室</span></div>
-                            <p class="text-one">负责教学计划的执行，课程和师资安排;负责管理及维护负责与学校各职能部门一起做好师资培训工作；以及其他与教学管理、教师发展相关的事务性工作。
-                            </p>
-                            <p>
-                                联 系 人：黄老师<br> 办公地点：学校内3号教学楼3309室<br> 联系电话：13813881388
+                        <div class="institution-item flex-sb">
+                            <div class="title fwb">
+                                综合事务办公室
+                            </div>
+                            <p class="text-one fs14">负责学院的日常管理工作，包括人员管理、资产管理、绩效管理、文档管理及对外联络等工作；协调与服务各部门工作，其他学院事务性工作。</p>
+                            <p class="fs14 connect">
+                                联 系 人：许老师<br>
+                                办公地点：学校内3号教学楼3309室<br>
+                                联系电话：13813881388
                             </p>
                         </div>
-                        <div class="institution-item">
-                            <div class="title">
-                                <span>对外合作办公室</span>
+                        <div class="institution-item flex-sb">
+                            <div class="title fwb">
+                                综合事务办公室
                             </div>
-                            <p class="text-one">负责学院日常管理工作，包括人员管理、资产管理、绩效管理、文档管理及对外联络等工作；拟订工作计划、总结，协调与服务各部门工作，其他学院事务性工作。
-                            </p>
-                            <p>
-                                联 系 人：李老师<br> 办公地点：学校内3号教学楼3309室<br> 联系电话：13813881388
+                            <p class="text-one fs14">负责学院的日常管理工作，包括人员管理、资产管理、绩效管理、文档管理及对外联络等工作；协调与服务各部门工作，其他学院事务性工作。</p>
+                            <p class="fs14 connect">
+                                联 系 人：许老师<br>
+                                办公地点：学校内3号教学楼3309室<br>
+                                联系电话：13813881388
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
-
 
             <!-- 精彩瞬间 -->
-            <div class="content splendid">
-                <div class="content-main splendid-main">
-                    <h2 class="content-title splendid-title">精彩瞬间</h2>
-
-
-                    <div class="splendid-list">
-                        <div class="splendid-item">
-                            <img src="./img/about/splendid-1.png" alt="">
-                            <p class="line3">2023年阿斯塔纳世博会中国馆 国家主席习近平邀请哈萨克斯坦总统纳扎尔巴耶夫体验我司模拟驾驶器</p>
-                        </div>
-                        <div class="splendid-item">
-                            <img src="./img/about/splendid-2.png" alt="">
-                            <p class="line3">2023年阿斯塔纳世博会中国馆 国家主席习近平邀请哈萨克斯坦总统纳扎尔巴耶夫体验我司模拟驾驶器</p>
-                        </div>
-                        <div class="splendid-item">
-                            <img src="./img/about/splendid-3.png" alt="">
-                            <p class="line3">2022年阿斯塔纳世博会中国馆 国家主席习近平邀请哈萨克斯坦总统纳扎尔巴耶夫体验我司模拟驾驶器</p>
-                        </div>
-                        <div class="splendid-item">
-                            <img src="./img/about/splendid-4.png" alt="">
-                            <p class="line3">2020年阿斯塔纳世博会中国馆 国家主席习近平邀请</p>
-                        </div>
-                        <div class="splendid-item">
-                            <img src="./img/about/splendid-5.png" alt="">
-                            <p class="line3">2018年阿斯塔纳世博会中国馆 国家主席习近平邀请哈萨克斯坦总统纳扎</p>
-                        </div>
-                        <div class="splendid-item">
-                            <img src="./img/about/splendid-6.png" alt="">
-                            <p class="line3">2018年阿斯塔纳世博会中国馆 国家主席习近平邀请哈萨克斯坦总统纳扎</p>
-                        </div>
-                        <div class="splendid-item">
-                            <img src="./img/about/splendid-7.png" alt="">
-                            <p class="line3">2018年阿斯塔纳世博会中国馆 国家主席习近平邀请哈萨克斯坦总统纳扎</p>
-                        </div>
-                        <div class="splendid-item">
-                            <img src="./img/about/splendid-8.png" alt="">
-                            <p class="line3">2014年运达埃塞俄比亚亚德斯亚贝巴集成项目 国家总理李克强视察项目</p>
-                        </div>
-                    </div>
+            <div class="branch-activity splendid">
+                <div class="wp">
+                    <h3 class="fs36 splendid-title" style="text-align: left; ">精彩瞬间</h3>
+                    <ul class="branch-list flex-sb">
+                        <li class="branch-list-item">
+                            <a href="" class="alin_r  ">
+                                <img src="./img/partyBuilding/branch1.png" alt="">
+                                <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
+                            </a>
+                        </li>
+                        <li class="branch-list-item">
+                            <a href="" class="alin_r  ">
+                                <img src="./img/partyBuilding/branch2.png" alt="">
+                                <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
+                            </a>
+                        </li>
+                        <li class="branch-list-item">
+                            <a href="" class="alin_r  ">
+                                <img src="./img/partyBuilding/branch3.png" alt="">
+                                <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
+                            </a>
+                        </li>
+                        <li class="branch-list-item">
+                            <a href="" class="alin_r  ">
+                                <img src="./img/partyBuilding/branch4.png" alt="">
+                                <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
+                            </a>
+                        </li>
+                        <li class="branch-list-item">
+                            <a href="" class="alin_r  ">
+                                <img src="./img/partyBuilding/branch5.png" alt="">
+                                <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
+                            </a>
+                        </li>
+                        <li class="branch-list-item">
+                            <a href="" class="alin_r ">
+                                <img src="./img/partyBuilding/branch6.png" alt="">
+                                <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
+                            </a>
+                        </li>
+                        <li class="branch-list-item">
+                            <a href="" class="alin_r ">
+                                <img src="./img/partyBuilding/branch7.png" alt="">
+                                <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
+                            </a>
+                        </li>
+                        <li class="branch-list-item">
+                            <a href="" class="alin_r  ">
+                                <img src="./img/partyBuilding/branch8.png" alt="">
+                                <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-
-
-
-
-
-
         </div>
     </main>
     <footer>
