--- a/apply-for-us.html
+++ b/apply-for-us.html
@@ -151,10 +151,10 @@
       <div class="top-nav">
         <img src="./img/news/icon1.png" alt="">
         <a href="./index.html" class="fs14">首页 ></a>
-        <span class="fs14">报考我们</span>
+        <span class="fs14">新闻公告</span>
       </div>
     </div>
-
+    <!-- 蓝色背景 -->
     <div class="top-bj">
       <img src="./img/apply/bj-top.png" alt="">
     </div>
@@ -162,112 +162,81 @@
     <div class="main-content">
       <!-- 报考方式可选 -->
       <div class="application content">
-        <div class="application-main content-main">
-          <h2 class="application-title content-title">报考方式可选</h2>
-          <div class="application-content">
+        <div class="application-main content-main wp">
+          <h2 class="application-title content-title fs36 fwb">报考方式可选</h2>
+          <div class="application-content flex-sb">
 
             <div class="application-item">
               <div class="application-item-title">
-                <h3>单独招生</h3>
+                <h3 class="fs30">单独招生</h3>
               </div>
               <ul class="list">
-                <li class="list-item">
+                <li class="list-item flex">
                   <div class="application-icon">
                     <img src="./img/apply/icon-01.png" alt="">
                   </div>
                   <p>招生计划：</p>
                   <p class="item-last">学院所有专业均投入单独招生计划 </p>
                 </li>
-                <li class="list-item">
+                <li class="list-item flex">
                   <div class="application-icon">
-
                     <img src="./img/apply/icon-02.png" alt="">
-
-                  </div>
-                  <p>招生时间：</p>
-                  <p class="item-last">每年3月份考试、4月份录取 </p>
-                </li>
-                <li class="list-item">
-                  <div class="application-icon">
-                    <img src="./img/apply/icon-03.png" alt="">
-
-                  </div>
-
-                  <p> 报名方式：</p>
-                  <p class="item-last">通过省考试院报名系统报考 </p>
-                </li>
-                <li class="list-item">
-                  <div class="application-icon">
-                    <img src="./img/apply/icon-04.png" alt="">
-
-                  </div>
-
-                  <p>报名要求：</p>
-                  <p class="item-last">应届高中、职中毕业生</p>
-                </li>
-
-                <li class="list-item">
-                  <div class="application-icon">
-                    <img src="./img/apply/icon-05.png" alt="">
-
-                  </div>
-                  <p class="item-first">考试方式：</p>
-                  <p class="item-last">学生报名后，参加省统一命题的文化科目考试 （语文、数学、英语）和学校统一组织的技能测 试，由学校自行划定分数线确定录取名单。</p>
-                </li>
-              </ul>
-            </div>
-            <div class="application-item">
-              <div class="application-item-title">
-                <h3>单独招生</h3>
-              </div>
-              <ul class="list">
-                <li class="list-item">
-                  <div class="application-icon">
-                    <img src="./img/apply/icon-01.png" alt="">
-
                   </div>
                   <p>招生计划：</p>
                   <p class="item-last">学院所有专业均投入单独招生计划 </p>
                 </li>
-                <li class="list-item">
-                  <div class="application-icon">
-
-                    <img src="./img/apply/icon-02.png" alt="">
-
-                  </div>
-                  <p>招生时间：</p>
-                  <p class="item-last">每年3月份考试、4月份录取 </p>
-                </li>
-                <li class="list-item">
+                <li class="list-item flex">
                   <div class="application-icon">
                     <img src="./img/apply/icon-03.png" alt="">
-
                   </div>
-
-                  <p> 报名方式：</p>
-                  <p class="item-last">通过省考试院报名系统报考 </p>
+                  <p>招生计划：</p>
+                  <p class="item-last">学院所有专业均投入单独招生计划 </p>
                 </li>
-                <li class="list-item">
+                <li class="list-item flex">
                   <div class="application-icon">
-                    <img src="./img/apply/icon-04.png" alt="">
-
+                    <img src="./img/apply/icon-01.png" alt="">
                   </div>
-
-                  <p>报名要求：</p>
-                  <p class="item-last">应届高中、职中毕业生</p>
-                </li>
-
-                <li class="list-item">
-                  <div class="application-icon">
-                    <img src="./img/apply/icon-05.png" alt="">
-
-                  </div>
-                  <p class="item-first">考试方式：</p>
+                  <p>招生计划：</p>
                   <p class="item-last">学生报名后，参加省统一命题的文化科目考试 （语文、数学、英语）和学校统一组织的技能测 试，由学校自行划定分数线确定录取名单。</p>
                 </li>
               </ul>
             </div>
 
+            <div class="application-item">
+              <div class="application-item-title">
+                <h3 class="fs30">单独招生</h3>
+              </div>
+              <ul class="list">
+                <li class="list-item flex">
+                  <div class="application-icon">
+                    <img src="./img/apply/icon-01.png" alt="">
+                  </div>
+                  <p>招生计划：</p>
+                  <p class="item-last">学院所有专业均投入单独招生计划 </p>
+                </li>
+                <li class="list-item flex">
+                  <div class="application-icon">
+                    <img src="./img/apply/icon-02.png" alt="">
+                  </div>
+                  <p>招生计划：</p>
+                  <p class="item-last">学院所有专业均投入单独招生计划 </p>
+                </li>
+                <li class="list-item flex">
+                  <div class="application-icon">
+                    <img src="./img/apply/icon-03.png" alt="">
+                  </div>
+                  <p>招生计划：</p>
+                  <p class="item-last">学院所有专业均投入单独招生计划 </p>
+                </li>
+                <li class="list-item flex">
+                  <div class="application-icon">
+                    <img src="./img/apply/icon-01.png" alt="">
+                  </div>
+                  <p>招生计划：</p>
+                  <p class="item-last">学生报名后，参加省统一命题的文化科目考试 （语文、数学、英语）和学校统一组织的技能测 试，由学校自行划定分数线确定录取名单。</p>
+                </li>
+              </ul>
+            </div>
           </div>
 
         </div>
@@ -276,16 +245,16 @@
       <!-- 办学条件优渥 -->
 
       <div class="school content">
-        <div class="school-main content-main">
-          <h2 class="school-title content-title">
+        <div class="school-main wp">
+          <h2 class="school-title content-title fs36 fwb">
             办学条件优渥 </h2>
 
-          <div class="school-list">
+          <div class="school-list flex-sb">
             <div class="school-item">
               <div class="school-img">
                 <img src="./img/apply/school-01.png" alt="">
               </div>
-              <div class="school-text">
+              <div class="school-text line1">
                 美丽校园，学习沃土
               </div>
             </div>
@@ -293,7 +262,7 @@
               <div class="school-img">
                 <img src="./img/apply/school-03.png" alt="">
               </div>
-              <div class="school-text">
+              <div class="school-text line1">
                 名企牵手，打开更宽广的视野
 
               </div>
@@ -303,7 +272,7 @@
               <div class="school-img">
                 <img src="./img/apply/school-02.png" alt="">
               </div>
-              <div class="school-text">
+              <div class="school-text line1">
                 硬核实训室，探索科学的奥秘
 
               </div>
@@ -312,9 +281,7 @@
               <div class="school-img">
                 <img src="./img/apply/school-04.png" alt="">
               </div>
-              <div class="school-text">
-
-
+              <div class="school-text line1">
                 星级宿舍，更舒适自然更好的心情
               </div>
             </div>
@@ -322,7 +289,7 @@
               <div class="school-img">
                 <img src="./img/apply/school-05.png" alt="">
               </div>
-              <div class="school-text">
+              <div class="school-text line1">
 
                 丰富美食，填饱胃才能更好干革命
               </div>
@@ -331,7 +298,7 @@
               <div class="school-img">
                 <img src="./img/apply/school-06.png" alt="">
               </div>
-              <div class="school-text">
+              <div class="school-text line1">
                 交通便利，与古蜀文明三星堆做邻居
               </div>
             </div>
@@ -343,10 +310,10 @@
       <!-- 学生资助丰富 -->
 
       <div class="financially content ">
-        <div class="financially-main content-main">
-          <h2 class="financially-title content-title">
+        <div class="financially-main  wp">
+          <h2 class="financially-title content-title fs36 fwb">
             学生资助丰富 </h2>
-          <ul class="financially-item">
+          <ul class="financially-item flex-sb">
             <li>
               <div>
                 <h5 class="financially-title">
@@ -419,7 +386,7 @@
 
       <!-- 成长空间宽阔 -->
       <div class="growUp content">
-        <div class="growUp-main content-main">
+        <div class="growUp-main content-main wp">
           <h2 class="growUp-title content-title">
             成长空间宽阔 </h2>
           <div class="growUp-item">
