--- a/apply-for-us.html
+++ b/apply-for-us.html
@@ -318,68 +318,12 @@
               <div>
                 <h5 class="financially-title">
                   助学贷款</h5>
-                <hr class="financially-hr">
-                <p class="financially-text">支持并提供生源地贷款、助学贷款等多种贷款及绿色通道，不让一个学子因贫辍学</p>
-              </div>
-            </li>
-            <li>
-              <div>
-                <h5 class="financially-title">
-                  国家奖学金</h5>
-                <hr class="financially-hr">
-                <p class="financially-text">支持并提供生源地贷款、助学贷款等多种贷款及绿色通道，不让一个学子因贫辍学</p>
-              </div>
-            </li>
-            <li>
-              <div>
-                <h5 class="financially-title">
-                  国家助学金</h5>
-                <hr class="financially-hr">
-                <p class="financially-text">由中央与地方政府共同出资设立的资助家庭经济困难的在校学生，每年3000~5000元</p>
-              </div>
-            </li>
-            <li>
-              <div>
-                <h5 class="financially-title">
-                  学业奖学金</h5>
-                <hr class="financially-hr">
-                <p class="financially-text">学校设立的用于奖励学业优异的学生，设立特等、一、二、三等，奖金200~1200元</p>
-              </div>
-            </li>
-            <li>
-              <div>
-                <h5 class="financially-title">
-                  企业奖学金</h5>
-                <hr class="financially-hr">
-                <p class="financially-text">由企业捐赠设立的用于奖励学业或创新创业优异学生，奖金1000~5000元不等。</p>
-              </div>
-            </li>
-            <li>
-              <div>
-                <h5 class="financially-title">
-                  勤工助学</h5>
-                <hr class="financially-hr">
-                <p class="financially-text">学校提供了诸多勤工助学岗位及校内实习岗位，按工作时间月补贴200~1200元不等</p>
-              </div>
-            </li>
-            <li>
-              <div>
-                <h5 class="financially-title">
-                  工学交替</h5>
-                <hr class="financially-hr">
-                <p class="financially-text">学校与企业设立的校内工学交替岗位，支持工读结合，按工作时间月1000~4000元不等</p>
-              </div>
 
-            </li>
-            <li>
-              <div>
-                <h5 class="financially-title">
-                  企业实习</h5>
-                <hr class="financially-hr">
-                <p class="financially-text">大三综合实训结束后，学生可申请到企业参加实习，月工资根据企业和岗位确定</p>
+                <p class="financially-text line3">支持并提供生源地贷款、助学贷款等多种贷款及绿色通道，不让一个学子因贫辍学</p>
               </div>
-
             </li>
+
+
           </ul>
         </div>
       </div>
