--- a/about.html
+++ b/about.html
@@ -310,7 +310,7 @@
             <!-- 机构设置 -->
             <div class="content institution">
                 <div class="content-main institution-main wp">
-                    <h2 class="content-title institution-title">机构设置</h2>
+                    <h2 class="content-title institution-title fs36">机构设置</h2>
                     <div class="institution-list flex-sb">
                         <div class="institution-item flex-sb">
                             <div class="title fwb">
