--- a/apply-for-us.html
+++ b/apply-for-us.html
@@ -385,56 +385,64 @@
 
       <!-- 成长空间宽阔 -->
       <div class="growUp content">
-        <div class="growUp-main content-main wp">
-          <h2 class="growUp-title content-title">
+        <div class="growUp-main wp">
+          <h2 class="growUp-title content-title fs36 fwb">
             成长空间宽阔 </h2>
-          <div class="growUp-item">
-            <div class="item-list item-befter-one">
+
+          <ul class="growUp-item flex-sb">
+            <li>
               <img src="./img/apply/growUp-01.png" alt="">
-              <ul>
-                <li>
-                  <p class="item-title">专升本</p>
-                  <p class="item-text">学校与四川师范大学、宜宾学院、成都文理学院吉利学院等多所本科院校签订专升本人才培养协议，为继续深造的学生提供了高质量升本通道。</p>
-                </li>
-                <li>
-                  <p class="item-title">自考本科</p>
-                  <p class="item-text">
-                    学校与西南交通大学签署有成人自考本科联合培养协议，学生在校期间可以选择专本套读，完成相关专业的课程和毕业答辩，即可获得本科毕业证书及学位证书，为今后考研深造、考取公务员等提供极佳选择。</p>
+              <div class="text-desc flex-start">
+                <span class="zhengfangxing"></span>
+                <div class="wenzi">
+                  <h6 class="title fs18">专升本</h6>
+                  <p>学校与四川师范大学、宜宾学院、成都文理学院吉利学院等多所本科院校签订专升本人才培养协议，为继续深造的学生提供了高质量升本通道。</p>
+                </div>
+              </div>
+              <div class="text-desc flex-start">
+                <span class="zhengfangxing"></span>
+                <div class="wenzi">
+                  <h6 class="title fs18">专升本</h6>
+                  <p>学校与四川师范大学、宜宾学院、成都文理学院吉利学院等多所本科院校签订专升本人才培养协议，为继续深造的学生提供了高质量升本通道。</p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <img src="./img/apply/growUp-02.png" alt="">
+              <div class="text-desc flex-start">
+                <span class="zhengfangxing"></span>
+                <div class="wenzi">
+                  <h6 class="title fs18">专升本</h6>
+                  <p>学校与四川师范大学、宜宾学院、成都文理学院吉利学院等多所本科院校签订专升本人才培养协议，为继续深造的学生提供了高质量升本通道。</p>
+                </div>
+              </div>
+              <div class="text-desc flex-start">
+                <span class="zhengfangxing"></span>
+                <div class="wenzi">
+                  <h6 class="title fs18">专升本</h6>
+                  <p>学校与四川师范大学、宜宾学院、成都文理学院吉利学院等多所本科院校签订专升本人才培养协议，为继续深造的学生提供了高质量升本通道。</p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <img src="./img/apply/growUp-03.png" alt="">
+              <div class="text-desc flex-start">
+                <span class="zhengfangxing"></span>
+                <div class="wenzi">
+                  <h6 class="title fs18">专升本</h6>
+                  <p>学校与四川师范大学、宜宾学院、成都文理学院吉利学院等多所本科院校签订专升本人才培养协议，为继续深造的学生提供了高质量升本通道。</p>
+                </div>
+              </div>
+              <div class="text-desc flex-start">
+                <span class="zhengfangxing"></span>
+                <div class="wenzi">
+                  <h6 class="title fs18">专升本</h6>
+                  <p>学校与四川师范大学、宜宾学院、成都文理学院吉利学院等多所本科院校签订专升本人才培养协议，为继续深造的学生提供了高质量升本通道。</p>
+                </div>
+              </div>
+            </li>
+          </ul>
 
-                </li>
-              </ul>
-            </div>
-            <div class="item-list item-befter-two"><img src="./img/apply/growUp-02.png" alt="">
-              <ul>
-                <li>
-                  <p class="item-title">订单培养班</p>
-                  <p class="item-text">学校与阿里云、腾讯云、京东物流、苏宁科技、携程、大宇宙等知名企业签署战略合作协议，由企业定制培养方案和课程，学生毕业后到相关企业就业。</p>
-                </li>
-                <li>
-                  <p class="item-title">
-                    自考本科</p>
-                  <p class="item-text">学校与超过100家企业签订了就业合作协议，每年组织数十场招聘会，来校招聘企业超过300家，提供就业岗位近万个，为学生就业提供更多可选择空间。</p>
-
-                </li>
-              </ul>
-            </div>
-            <div class="item-list item-befter-three"><img src="./img/apply/growUp-03.png" alt="">
-              <ul>
-                <li>
-                  <p class="item-title">出国留学</p>
-                  <p class="item-text">
-                    学校与与泰国南邦皇家大学、日本武藏野大学、西班牙阿利坎特大学等海外高校合作，打通学生海外升学通道。</p>
-
-                </li>
-                <li>
-                  <p class="item-title">
-                    出国就业</p>
-                  <p class="item-text">
-                    与国书日本语学校、日本法人医疗之窗等海外机构合作，拓展学生海外就业渠道。</p>
-                </li>
-              </ul>
-            </div>
-          </div>
         </div>
       </div>
 
@@ -443,15 +451,15 @@
       <div class="consult content">
 
         <div class="consult-main wp">
-          <h2 class="consult-title content-title">
+          <h2 class="consult-title content-title fs36 fwb">
             报考咨询方式 </h2>
 
           <div class="consult-main">
             <p class="consult-mian-title">
               热烈欢迎每一位学子选择德阳科贸职业学院，选择人才培养改革特区数字产业学院（原信息工程学院），让我们共同努力，一起在未来的数字化时代探索新的方向，你的任何疑问我们都将耐心解答。</p>
-            <div class="main-item">
+            <div class="main-item flex-sb">
               <div class="main-content main-lianxi">
-                <p class="main-title">联系电话</p>
+                <p class="main-title fs30">联系电话</p>
                 <hr class="main-hr">
                 <div class="main-content-list">
                   <ul>
@@ -489,20 +497,20 @@
               </div>
 
               <div class="main-content main-map">
-                <p class="main-title">办学区域</p>
+                <p class="main-title fs30">办学区域</p>
                 <hr class="main-hr">
                 <div class="main-map-conent">
                   <p class="map-text-one">学生学习所在校区，日常办公区域</p>
-                  <p>地址：四川省广汉市三星堆大道东段122号德阳科贸专业学院6号教学楼3楼、3号教学楼3楼</p>
+                  <p class="addrens fs14">地址：四川省广汉市三星堆大道东段122号德阳科贸专业学院6号教学楼3楼、3号教学楼3楼</p>
                   <img src="./img/apply/map-01.png" alt="">
                 </div>
               </div>
               <div class="main-content main-map">
-                <p class="main-title">成都办公室</p>
+                <p class="main-title fs30">办学区域</p>
                 <hr class="main-hr">
                 <div class="main-map-conent">
                   <p class="map-text-one">学生学习所在校区，日常办公区域</p>
-                  <p>地址：四川省成都市二环路北一段111号西南交大创新大厦23楼2305（地铁7号线九里站A口）</p>
+                  <p class="addrens fs14">地址：四川省广汉市三星堆大道东段122号德阳科贸专业学院6号教学楼3楼、3号教学楼3楼</p>
                   <img src="./img/apply/map-02.png" alt="">
                 </div>
               </div>
