--- a/about.html
+++ b/about.html
@@ -316,7 +316,11 @@
                             <div class="title fwb">
                                 综合事务办公室
                             </div>
-                            <p class="text-one fs14">负责学院的日常管理工作，包括人员管理、资产管理、绩效管理、文档管理及对外联络等工作；协调与服务各部门工作，其他学院事务性工作。</p>
+                            <p class="text-one fs14">
+                                <span class="line4">
+                                    负责学院的日常管理工作，包括人员管理、资产管理、绩效管理、文档管理及对外联络等工作；协调与服务各部门工作，其他学院事务性工作。
+                                </span>
+                            </p>
                             <p class="fs14 connect">
                                 联 系 人：许老师<br>
                                 办公地点：学校内3号教学楼3309室<br>
@@ -327,7 +331,11 @@
                             <div class="title fwb">
                                 综合事务办公室
                             </div>
-                            <p class="text-one fs14">负责学院的日常管理工作，包括人员管理、资产管理、绩效管理、文档管理及对外联络等工作；协调与服务各部门工作，其他学院事务性工作。</p>
+                            <p class="text-one fs14">
+                                <span class="line4">
+                                    负责学院的日常管理工作，包括人员管理、资产管理、绩效管理、文档管理及对外联络等工作；协调与服务各部门工作，其他学院事务性工作。
+                                </span>
+                            </p>
                             <p class="fs14 connect">
                                 联 系 人：许老师<br>
                                 办公地点：学校内3号教学楼3309室<br>
@@ -338,7 +346,11 @@
                             <div class="title fwb">
                                 综合事务办公室
                             </div>
-                            <p class="text-one fs14">负责学院的日常管理工作，包括人员管理、资产管理、绩效管理、文档管理及对外联络等工作；协调与服务各部门工作，其他学院事务性工作。</p>
+                            <p class="text-one fs14">
+                                <span class="line4">
+                                    负责学院的日常管理工作，包括人员管理、资产管理、绩效管理、文档管理及对外联络等工作；协调与服务各部门工作，其他学院事务性工作。
+                                </span>
+                            </p>
                             <p class="fs14 connect">
                                 联 系 人：许老师<br>
                                 办公地点：学校内3号教学楼3309室<br>
@@ -349,7 +361,11 @@
                             <div class="title fwb">
                                 综合事务办公室
                             </div>
-                            <p class="text-one fs14">负责学院的日常管理工作，包括人员管理、资产管理、绩效管理、文档管理及对外联络等工作；协调与服务各部门工作，其他学院事务性工作。</p>
+                            <p class="text-one fs14">
+                                <span class="line4">
+                                    负责学院的日常管理工作，包括人员管理、资产管理、绩效管理、文档管理及对外联络等工作；协调与服务各部门工作，其他学院事务性工作。
+                                </span>
+                            </p>
                             <p class="fs14 connect">
                                 联 系 人：许老师<br>
                                 办公地点：学校内3号教学楼3309室<br>
@@ -366,52 +382,36 @@
                     <h3 class="fs36 splendid-title" style="text-align: left; ">精彩瞬间</h3>
                     <ul class="branch-list flex-sb">
                         <li class="branch-list-item">
-                            <a href="" class="alin_r  ">
-                                <img src="./img/partyBuilding/branch1.png" alt="">
-                                <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
-                            </a>
+                            <img src="./img/partyBuilding/branch8.png" alt="">
+                            <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
                         </li>
                         <li class="branch-list-item">
-                            <a href="" class="alin_r  ">
-                                <img src="./img/partyBuilding/branch2.png" alt="">
-                                <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
-                            </a>
+                            <img src="./img/partyBuilding/branch8.png" alt="">
+                            <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
                         </li>
                         <li class="branch-list-item">
-                            <a href="" class="alin_r  ">
-                                <img src="./img/partyBuilding/branch3.png" alt="">
-                                <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
-                            </a>
+                            <img src="./img/partyBuilding/branch8.png" alt="">
+                            <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
                         </li>
                         <li class="branch-list-item">
-                            <a href="" class="alin_r  ">
-                                <img src="./img/partyBuilding/branch4.png" alt="">
-                                <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
-                            </a>
+                            <img src="./img/partyBuilding/branch8.png" alt="">
+                            <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
                         </li>
                         <li class="branch-list-item">
-                            <a href="" class="alin_r  ">
-                                <img src="./img/partyBuilding/branch5.png" alt="">
-                                <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
-                            </a>
+                            <img src="./img/partyBuilding/branch8.png" alt="">
+                            <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
                         </li>
                         <li class="branch-list-item">
-                            <a href="" class="alin_r ">
-                                <img src="./img/partyBuilding/branch6.png" alt="">
-                                <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
-                            </a>
+                            <img src="./img/partyBuilding/branch8.png" alt="">
+                            <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
                         </li>
                         <li class="branch-list-item">
-                            <a href="" class="alin_r ">
-                                <img src="./img/partyBuilding/branch7.png" alt="">
-                                <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
-                            </a>
+                            <img src="./img/partyBuilding/branch8.png" alt="">
+                            <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
                         </li>
                         <li class="branch-list-item">
-                            <a href="" class="alin_r  ">
-                                <img src="./img/partyBuilding/branch8.png" alt="">
-                                <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
-                            </a>
+                            <img src="./img/partyBuilding/branch8.png" alt="">
+                            <p class="fs14 line3 aline_r">德阳科贸职业学院隆重举行2020年应征入伍大学生座谈会</p>
                         </li>
                     </ul>
                 </div>
