--- a/apply-for-us.html
+++ b/apply-for-us.html
@@ -155,8 +155,8 @@
       </div>
     </div>
     <!-- 蓝色背景 -->
-    <div class="top-bj">
-      <img src="./img/apply/bj-top.png" alt="">
+    <div class="top-bj" id="parentContainer">
+      <canvas  id="cas"></canvas>
     </div>
 
     <div class="main-content">
@@ -556,5 +556,6 @@
 </script>
 <script src="./js/public.js"></script>
 <script src="./js/news.js"></script>
+<script src="./js/lizi.js"></script>
 
 </html>
