--- a/personnel-training.html
+++ b/personnel-training.html
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-    <!-- 头部 -->
     <div class="header trans">
         <div class="wpm flex">
             <div class="logo v-center">
@@ -31,42 +30,42 @@
                     <ul class="flex no-wrap">
                         <li>
                             <div class="nav-parent">
-                                <a href="#"> 学院首页</a>
+                                <a href="./index.html " target="_blank"> 学院首页</a>
                             </div>
                         </li>
                         <li>
                             <div class="nav-parent">
-                                <a href="">学院介绍 </a>
+                                <a href="./about.html" target="_blank">学院介绍 </a>
                             </div>
                         </li>
                         <li>
                             <div class="nav-parent">
-                                <a href=""> 党建引领</a>
+                                <a href="./party-building-work.html" target="_blank"> 党建引领</a>
                             </div>
                         </li>
                         <li>
                             <div class="nav-parent">
-                                <a href="">特色培养</a>
+                                <a href="./teach-staff.html" target="_blank">师资队伍</a>
                             </div>
                         </li>
                         <li>
                             <div class="nav-parent">
-                                <a href="">学生支持 </a>
+                                <a href="./personnel-training.html" target="_blank">人才培养 </a>
                             </div>
                         </li>
                         <li>
                             <div class="nav-parent">
-                                <a href="">就业指导</a>
+                                <a href="./student-work.html" target="_blank">学生支持</a>
                             </div>
                         </li>
                         <li>
                             <div class="nav-parent">
-                                <a href="">报考指南 </a>
+                                <a href="./employment-information.html" target="_blank">就业指导 </a>
                             </div>
                         </li>
                         <li>
                             <div class="nav-parent">
-                                <a href="">联系我们</a>
+                                <a href="./apply-for-us.html" target="_blank">报考指南</a>
                             </div>
                         </li>
                         <li>
@@ -87,56 +86,56 @@
     </div>
     <!-- 手机端导航 -->
     <div class="mobNav">
-        <ul class="wp">
+        <ul class="">
             <li>
                 <div class="navp flex">
-                    <a href="" target="_blank">学校概况</a>
+                    <a href="./index.html " target="_blank"> 学院首页</a>
                 </div>
             </li>
             <li>
                 <div class="navp flex">
-                    <a href="" target="_blank">系部设置</a>
+                    <a href="./about.html" target="_blank">学院介绍 </a>
 
                 </div>
             </li>
             <li>
                 <div class="navp flex">
-                    <a href="" target="_blank">招生信息</a>
-
-                </div>
-
-            </li>
-            <li>
-                <div class="navp flex">
-                    <a href="" target="_blank">人才培养</a>
+                    <a href="./party-building-work.html" target="_blank"> 党建引领</a>
 
                 </div>
 
             </li>
             <li>
                 <div class="navp flex">
-                    <a href="" target="_blank">学生工作 </a>
+                    <a href="./teach-staff.html" target="_blank">师资队伍</a>
 
                 </div>
 
             </li>
             <li>
                 <div class="navp flex">
-                    <a href="" target="_blank">培训中心</a>
+                    <a href="./personnel-training.html" target="_blank">人才培养 </a>
 
                 </div>
 
             </li>
             <li>
                 <div class="navp flex">
-                    <a href="zsjy_.htm" target="_blank">交流合作 </a>
+                    <a href="./student-work.html" target="_blank">学生支持</a>
 
                 </div>
 
             </li>
             <li>
                 <div class="navp flex">
-                    <a href="" target="_blank">人才招聘</a>
+                    <a href="./employment-information.html" target="_blank">就业指导 </a>
+
+                </div>
+
+            </li>
+            <li>
+                <div class="navp flex">
+                    <a href="./apply-for-us.html" target="_blank">报考指南</a>
                 </div>
             </li>
         </ul>
