--- a/teach-staff.html
+++ b/teach-staff.html
@@ -13,130 +13,130 @@
 </head>
 
 <body>
-  <!-- 头部 -->
   <div class="header trans">
     <div class="wpm flex">
-      <div class="logo v-center">
-        <a href="">
-          <img src="img/home/logo.png" alt="" class="logoWhite trans" />
-          <!-- Logo改成蓝色 -->
-          <img src="img/home/blue-logo.png" alt="" class="logoBlue trans" />
-        </a>
-      </div>
-      <div class="header-r v-center">
-        <div class="header-nav">
-          <ul class="flex no-wrap">
-            <li>
-              <div class="nav-parent">
-                <a href="#"> 学院首页</a>
-              </div>
-            </li>
-            <li>
-              <div class="nav-parent">
-                <a href="">学院介绍 </a>
-              </div>
-            </li>
-            <li>
-              <div class="nav-parent">
-                <a href=""> 党建引领</a>
-              </div>
-            </li>
-            <li>
-              <div class="nav-parent">
-                <a href="">特色培养</a>
-              </div>
-            </li>
-            <li>
-              <div class="nav-parent">
-                <a href="">学生支持 </a>
-              </div>
-            </li>
-            <li>
-              <div class="nav-parent">
-                <a href="">就业指导</a>
-              </div>
-            </li>
-            <li>
-              <div class="nav-parent">
-                <a href="">报考指南 </a>
-              </div>
-            </li>
-            <li>
-              <div class="nav-parent">
-                <a href="">联系我们</a>
-              </div>
-            </li>
-            <li>
-              <div class="nav-parent">
-                <a href="#" class="last-a flex"><i><img src="./img/home/icon-computer.png" alt=""></i>在线学习</a>
-              </div>
-            </li>
-          </ul>
-
+        <div class="logo v-center">
+            <a href="">
+                <img src="img/home/logo.png" alt="" class="logoWhite trans" />
+                <!-- Logo改成蓝色 -->
+                <img src="img/home/blue-logo.png" alt="" class="logoBlue trans" />
+            </a>
         </div>
-      </div>
-      <div class="navmob-btn">
-        <a class="head-menu-btn " href="javascript:;"><span class="line-1"></span><span class="line-2"></span><span
-            class="line-3"></span>MENU</a>
-      </div>
+        <div class="header-r v-center">
+            <div class="header-nav">
+                <ul class="flex no-wrap">
+                    <li>
+                        <div class="nav-parent">
+                            <a href="./index.html " target="_blank"> 学院首页</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="nav-parent">
+                            <a href="./about.html" target="_blank">学院介绍 </a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="nav-parent">
+                            <a href="./party-building-work.html" target="_blank"> 党建引领</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="nav-parent">
+                            <a href="./teach-staff.html" target="_blank">师资队伍</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="nav-parent">
+                            <a href="./personnel-training.html" target="_blank">人才培养 </a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="nav-parent">
+                            <a href="./student-work.html" target="_blank">学生支持</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="nav-parent">
+                            <a href="./employment-information.html" target="_blank">就业指导 </a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="nav-parent">
+                            <a href="./apply-for-us.html" target="_blank">报考指南</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="nav-parent">
+                            <a href="#" class="last-a flex"><i><img src="./img/home/icon-computer.png"
+                                        alt=""></i>在线学习</a>
+                        </div>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+        <div class="navmob-btn">
+            <a class="head-menu-btn " href="javascript:;"><span class="line-1"></span><span
+                    class="line-2"></span><span class="line-3"></span>MENU</a>
+        </div>
     </div>
-  </div>
-  <!-- 手机端导航 -->
-  <div class="mobNav">
+</div>
+<!-- 手机端导航 -->
+<div class="mobNav">
     <ul class="">
-      <li>
-        <div class="navp flex">
-          <a href="" target="_blank">学校概况</a>
-        </div>
-      </li>
-      <li>
-        <div class="navp flex">
-          <a href="" target="_blank">系部设置</a>
+        <li>
+            <div class="navp flex">
+                <a href="./index.html " target="_blank"> 学院首页</a>
+            </div>
+        </li>
+        <li>
+            <div class="navp flex">
+                <a href="./about.html" target="_blank">学院介绍 </a>
 
-        </div>
-      </li>
-      <li>
-        <div class="navp flex">
-          <a href="" target="_blank">招生信息</a>
+            </div>
+        </li>
+        <li>
+            <div class="navp flex">
+                <a href="./party-building-work.html" target="_blank"> 党建引领</a>
 
-        </div>
+            </div>
 
-      </li>
-      <li>
-        <div class="navp flex">
-          <a href="" target="_blank">人才培养</a>
+        </li>
+        <li>
+            <div class="navp flex">
+                <a href="./teach-staff.html" target="_blank">师资队伍</a>
 
-        </div>
+            </div>
 
-      </li>
-      <li>
-        <div class="navp flex">
-          <a href="" target="_blank">学生工作 </a>
+        </li>
+        <li>
+            <div class="navp flex">
+                <a href="./personnel-training.html" target="_blank">人才培养 </a>
 
-        </div>
+            </div>
 
-      </li>
-      <li>
-        <div class="navp flex">
-          <a href="" target="_blank">培训中心</a>
+        </li>
+        <li>
+            <div class="navp flex">
+                <a href="./student-work.html" target="_blank">学生支持</a>
 
-        </div>
+            </div>
 
-      </li>
-      <li>
-        <div class="navp flex">
-          <a href="zsjy_.htm" target="_blank">交流合作 </a>
+        </li>
+        <li>
+            <div class="navp flex">
+                <a href="./employment-information.html" target="_blank">就业指导 </a>
 
-        </div>
+            </div>
 
-      </li>
-      <li>
-        <div class="navp flex">
-          <a href="" target="_blank">人才招聘</a>
-        </div>
-      </li>
+        </li>
+        <li>
+            <div class="navp flex">
+                <a href="./apply-for-us.html" target="_blank">报考指南</a>
+            </div>
+        </li>
     </ul>
-  </div>
+</div>
   <!-- 顶部banner -->
   <div class="news-bulletin-banner">
     <img src="./img/news/banner.png" alt="" class="bannerImg">
