--- a/apply-for-us.html
+++ b/apply-for-us.html
@@ -155,8 +155,60 @@
       </div>
     </div>
     <!-- 蓝色背景 -->
-    <div class="top-bj" id="parentContainer">
-      <canvas  id="cas"></canvas>
+    <div class="top-bj" >
+      <div class="top-name">
+        <div class="top-title-name">硬核专业，打开数字世界的窗口</div>
+        <div class="top-title-des">一起探寻未来强人工智能时代</div>
+      </div>
+      <section id="parentContainer">
+        <canvas id="cas"></canvas>
+        <div class="app-wrapper">
+          <div class="app-content">
+            <div class="app-doi"></div>
+            <div class="app-name">大数据技术与应用</div>
+          </div>
+          <div class="app-content">
+            <div class="app-doi"></div>
+            <div class="app-name">大数据技术与应用</div>
+          </div>
+          <div class="app-content">
+            <div class="app-doi"></div>
+            <div class="app-name">大数据技术与应用</div>
+          </div>
+          <div class="app-content">
+            <div class="app-doi"></div>
+            <div class="app-name">大数据技术与应用</div>
+          </div>
+          <div class="app-content">
+            <div class="app-doi"></div>
+            <div class="app-name">大数据技术与应用</div>
+          </div>
+          <div class="app-content">
+            <div class="app-doi"></div>
+            <div class="app-name">大数据技术与应用</div>
+          </div>
+          <div class="app-content">
+            <div class="app-doi"></div>
+            <div class="app-name">大数据技术与应用</div>
+          </div>
+          <div class="app-content">
+            <div class="app-doi"></div>
+            <div class="app-name">大数据技术与应用</div>
+          </div>
+          <div class="app-content">
+            <div class="app-doi"></div>
+            <div class="app-name">大数据技术与应用</div>
+          </div>
+          <div class="app-content">
+            <div class="app-doi"></div>
+            <div class="app-name">大数据技术与应用</div>
+          </div>
+          <div class="app-content">
+            <div class="app-doi"></div>
+            <div class="app-name">大数据技术与应用</div>
+          </div>
+        </div>
+      </section>
     </div>
 
     <div class="main-content">
