--- a/news-bulletin.html
+++ b/news-bulletin.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Responsive Font Size with rem</title>
+  <title>新闻公告</title>
   <link rel="stylesheet" href="./css/base.css">
   <link rel="stylesheet" href="./css/aos.css">
   <link rel="stylesheet" href="./css/style.css">
@@ -234,7 +234,7 @@
                 </div>
               </li>
             </ul>
-            <ul class="list">
+            <ul class="list have-orgin">
               <li class="list-item">
                 <div class="desc flex-sb flex-start">
                   <img src="./img/news/news-img-3.png" alt="">
