--- a/student-work.html
+++ b/student-work.html
@@ -144,8 +144,8 @@
     <div class="news-bulletin-banner">
         <img src="./img/studentWork/banner.png" alt="" class="bannerImg">
         <div class="banner-text">
-            <span>CPC</span>
-            <h2>党建工作</h2>
+            <span>STUDENT</span>
+            <h2>学生工作</h2>
         </div>
     </div>
     <!-- 主体 -->
@@ -157,7 +157,7 @@
                 <div class="top-nav wp">
                     <img src="./img/news/icon1.png" alt="">
                     <a href="./index.html" class="fs14">首页 ></a>
-                    <span class="fs14">党建工作</span>
+                    <span class="fs14">学生工作</span>
                 </div>
             </div>
             <!-- 通知公告 -->
@@ -285,7 +285,7 @@
                             </div>
                             <div class="teacher-desc flex-column-center">
                                 <p class="name fs18">任南燕</p>
-                                <p class="introduce fs14">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
+                                <p class="introduce fs14 line3">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
                             </div>
                         </li>
                         <li class="flex-column-center">
@@ -294,7 +294,7 @@
                             </div>
                             <div class="teacher-desc flex-column-center">
                                 <p class="name fs18">王维里</p>
-                                <p class="introduce fs14">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
+                                <p class="introduce fs14 line3">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
                             </div>
                         </li>
                         <li class="flex-column-center">
@@ -303,7 +303,7 @@
                             </div>
                             <div class="teacher-desc flex-column-center">
                                 <p class="name fs18">张美曦</p>
-                                <p class="introduce fs14">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
+                                <p class="introduce fs14 line3">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
                             </div>
                         </li>
                         <li class="flex-column-center">
@@ -312,7 +312,7 @@
                             </div>
                             <div class="teacher-desc flex-column-center">
                                 <p class="name fs18">任南燕</p>
-                                <p class="introduce fs14">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
+                                <p class="introduce fs14 line3">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
                             </div>
                         </li>
                         <li class="flex-column-center">
@@ -321,7 +321,7 @@
                             </div>
                             <div class="teacher-desc flex-column-center">
                                 <p class="name fs18">任南燕</p>
-                                <p class="introduce fs14">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
+                                <p class="introduce fs14 line3">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
                             </div>
                         </li>
                         <li class="flex-column-center">
@@ -330,7 +330,7 @@
                             </div>
                             <div class="teacher-desc flex-column-center">
                                 <p class="name fs18">任南燕</p>
-                                <p class="introduce fs14">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
+                                <p class="introduce fs14 line3">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
                             </div>
                         </li>
                         <li class="flex-column-center">
@@ -339,7 +339,7 @@
                             </div>
                             <div class="teacher-desc flex-column-center">
                                 <p class="name fs18">任南燕</p>
-                                <p class="introduce fs14">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
+                                <p class="introduce fs14 line3">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
                             </div>
                         </li>
                         <li class="flex-column-center">
@@ -348,7 +348,7 @@
                             </div>
                             <div class="teacher-desc flex-column-center">
                                 <p class="name fs18">任南燕</p>
-                                <p class="introduce fs14">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
+                                <p class="introduce fs14 line3">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
                             </div>
                         </li>
                         <li class="flex-column-center">
@@ -357,7 +357,7 @@
                             </div>
                             <div class="teacher-desc flex-column-center">
                                 <p class="name fs18">任南燕</p>
-                                <p class="introduce fs14">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
+                                <p class="introduce fs14 line3">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
                             </div>
                         </li>
                         <li class="flex-column-center">
@@ -366,7 +366,7 @@
                             </div>
                             <div class="teacher-desc flex-column-center">
                                 <p class="name fs18">任南燕</p>
-                                <p class="introduce fs14">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
+                                <p class="introduce fs14 line3">学生工作组组长，整体负责学院学生工作，辅导员队伍建设，学生安全等。</p>
                             </div>
                         </li>
                     </ul>
